--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,11 +7,11 @@
 body {
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
-	line-height: 30px;
+	line-height: 175%;
 	text-align: left;
 	/* Set width to 1200 instead of 960 for better layout (in my humble opinion). */
 	width: 100%;
-	height: 100%;
+	height: 90vh;
 	margin: 0%;
 	vertical-align: middle;
 }
@@ -27,10 +27,10 @@ header	{
 	margin-bottom: 0;
 	font-family: 'Georgia', Times, Times New Roman, serif;
 	text-align: center;
-	font-size: 1.5em;
+	font-size: 145%;
 	font-weight: bold;
 	vertical-align: middle;
-	padding-top: 15px;
+	padding-top: 2%;
 }
 
 h2,
@@ -38,15 +38,18 @@ h3	{
 	color: #4aaaa5;
 	border-bottom:	3px solid #dddddd;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	margin-top: 1px;
-	padding-bottom: 3px;
+	margin-top: 1%;
+	padding-bottom: 3%;
+	text-align: left;
 }
 
 nav	{
 	width: 27%;
+	height: 100%;
 	text-align: center;
 	float: right;
-	margin-right: 2%;
+	margin-right: 4%;
+	padding-top: 1%
 }
 
 ul {
@@ -58,12 +61,12 @@ ul {
 li {
 	float: left;
 	width: 33%;
-	padding: 10px;
+	padding: 2%;
 }
 
 li.border {
-	border-right: 1px solid #dddddd;
-	padding: 10px;
+	border-right: .01em solid #dddddd;
+	padding: 2%;
 }
 
 a {
@@ -96,6 +99,7 @@ section	{
 	background-color: #ffffff;
 	float: left;
 	color: #777777;
+	padding: 5%;
 	border: 2px solid #dddddd;
 }
 
@@ -121,7 +125,7 @@ footer {
 	margin: 0 auto;
 	vertical-align: middle;
 	padding: 18px;
-	height: 70px;
+	height: 15%;
 	background-color: #666666;
 	width: 100%;
 	border-bottom: none;
@@ -147,9 +151,9 @@ footer {
 
 .box {
 	display: inline-block;
-	width: 250px;
-	height: 100px;
-	margin: 20px;
+	width: 20%;
+	height: 10%;
+	margin: 2%;
 }
 
 /* Rotates project in portfolio on hover. */
@@ -215,9 +219,6 @@ footer {
 	margin-top: 2%;
 	margin-left: 2%;
 	margin-bottom: 2%;
-}
-
-#main-bio {
 	height: auto;
 	padding: 20px;
 }
@@ -228,16 +229,6 @@ footer {
 	margin-right: 20px;
 	width: 200px;
 	height: 200px;
-}
-
-#contact-form {
-	padding: 20px;
-	height: 500px;
-}
-
-#project-portfolio {
-	padding: 15px;
-	height: 500px;
 }
 
 /* 
@@ -265,13 +256,20 @@ footer {
 		margin-right: 2%
 	}
 
-	#main-bio {
+	#main-bio,
+	#contact-form,
+	#project-portfolio {
 		clear: both;
 		float: left;
 		overflow: auto 0;
-		width: initial;
+		width: 96%;
 		margin: 2%;
 	}
+
+	.left-align {
+		width: inherit;
+	}
+
 }
 
 /* 
@@ -290,7 +288,6 @@ footer {
 		margin-bottom: 0;
 		font-family: 'Georgia', Times, Times New Roman, serif;
 		text-align: center;
-		font-size: 1.5em;
 		font-weight: bold;
 		vertical-align: middle;
 		padding-top: 2%;
