--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,9 +151,9 @@ footer {
 
 .box {
 	display: inline-block;
-	width: 20%;
+	width: 100%;
 	height: 10%;
-	margin: 2%;
+	margin: 0%;
 }
 
 /* Rotates project in portfolio on hover. */
@@ -237,9 +237,6 @@ footer {
 */
 @media screen and (max-width: 980px) {
 	
-	#social-links {
-
-}
 
 /* 
   These rules take effect when the browser's width
@@ -270,6 +267,10 @@ footer {
 		width: inherit;
 	}
 
+	.box {
+		width: 50%;
+	}
+
 }
 
 /* 
@@ -277,7 +278,7 @@ footer {
   is 640px or less.
 */
 @media screen and (max-width: 640px) {
-	
+
 	header	{
 		float: left;
 		background-color: #4aaaa5;
@@ -303,7 +304,8 @@ footer {
 	}
 
 	.header-container {
-	border-bottom: none;
+		border-bottom: none;
+		z-index: -1;
 	}
 
 	#social-links {
@@ -321,6 +323,10 @@ footer {
 		overflow: auto 0;
 		width: initial;
 		margin: 2%;
+	}
+
+	.box {
+		width: 100%;
 	}
   
 }
