--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header	{
 	font-size: 145%;
 	font-weight: bold;
 	vertical-align: middle;
-	padding-top: 2%;
+	padding-top: 1%;
 }
 
 h2,
@@ -236,6 +236,11 @@ footer {
   is 769px or more.
 */
 @media screen and (max-width: 980px) {
+
+	/*
+	  No specific rules for large screens at this time.
+	*/
+}
 	
 
 /* 
@@ -244,6 +249,17 @@ footer {
 */
 @media screen and (max-width: 768px) {
 
+	.left-align {
+		width: inherit;
+	}
+
+
+	/* Two boxes per row. */
+	.box {
+		width: 50%;
+	}
+
+	/* Social links drop below main content. */
 	#social-links {
 		clear: both;
 		float: left;
@@ -253,6 +269,7 @@ footer {
 		margin-right: 2%
 	}
 
+	/* Main content takes up full width. */
 	#main-bio,
 	#contact-form,
 	#project-portfolio {
@@ -263,14 +280,6 @@ footer {
 		margin: 2%;
 	}
 
-	.left-align {
-		width: inherit;
-	}
-
-	.box {
-		width: 50%;
-	}
-
 }
 
 /* 
@@ -279,6 +288,7 @@ footer {
 */
 @media screen and (max-width: 640px) {
 
+	/* Ful width name header. */
 	header	{
 		float: left;
 		background-color: #4aaaa5;
@@ -291,10 +301,11 @@ footer {
 		text-align: center;
 		font-weight: bold;
 		vertical-align: middle;
-		padding-top: 2%;
+		padding-top: 3%;
 		margin-left: 0%;
 	}
 
+	/* Nav drops below header. */
 	nav	{
 		clear: both;
 		width: 100%;
@@ -303,9 +314,17 @@ footer {
 		border-bottom: 2px solid #cccccc;
 	}
 
+	p {
+		margin-top: 15px;
+	}
+
 	.header-container {
 		border-bottom: none;
 		z-index: -1;
+	}
+
+	.box {
+		width: 100%;
 	}
 
 	#social-links {
@@ -325,8 +344,11 @@ footer {
 		margin: 2%;
 	}
 
-	.box {
+	/* Image full width with space before paragraph. */
+	#bio-image {
 		width: 100%;
+		height: 100%;
+		margin-bottom: 15px;
 	}
   
 }
